Implemented application